feat: sync latest upstream tools and UI
Port the latest foraging, farming, mining, animal, cookbook, map toolbar, icon, and stability updates with regression coverage.